--- a/matrix_factorization/matrix_factorization.ipynb
+++ b/matrix_factorization/matrix_factorization.ipynb
@@ -73,7 +73,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_track_dict(df): # create a dictionary pairing a track_uri with an index\n",
+    "# dictionary to translate track uri's to integer indices\n",
+    "def make_track_dict(df): \n",
     "    result = {}\n",
     "    i = 0\n",
     "    for uri in pd.unique(df['track_uri']):\n",
@@ -81,7 +82,8 @@
     "        i += 1\n",
     "    return result\n",
     "\n",
-    "def make_R(df): # create the recommendation array\n",
+    "# create the big array R consisting of 1's and 0's. I didn't end up using this\n",
+    "def make_R(df): \n",
     "    m = len(pd.unique(df['pid']))\n",
     "    n = len(pd.unique(df['track_uri']))\n",
     "    track_dict = make_track_dict(df)\n",
@@ -91,16 +93,19 @@
     "        result[row['pid'], track_dict[row['track_uri']]] = 1\n",
     "    return result\n",
     "\n",
-    "def make_R_list(df): # create list of tuples where recommendation array should have a 1\n",
+    "# create list of tuples where recommendation array should have a 1\n",
+    "# i.e. if (2,18) is in this list, then playlist 2 contains track 18\n",
+    "def make_R_list(df): \n",
     "    result = []\n",
     "    track_dict = make_track_dict(df)\n",
     "    for index , row in df.iterrows():\n",
     "        result.append((row['pid'], track_dict[row['track_uri']]))\n",
     "    return result\n",
     "\n",
-    "def update_params_loop(R_list, P, Q, alpha, llambda): # use gradient descent to minimize MSE (with l2 regularization)\n",
-    "    newP = P \n",
-    "    newQ = Q\n",
+    "# use gradient descent to minimize MSE (with l2 regularization)\n",
+    "def update_params_loop(R_list, P, Q, alpha, llambda): \n",
+    "    newP = P.copy() \n",
+    "    newQ = Q.copy()\n",
     "    m , f = np.shape(P)\n",
     "    n = np.shape(Q)[0]\n",
     "\n",
@@ -113,7 +118,8 @@
     "        newQ[i,:] -= alpha * 2 * llambda * Q[i,:]\n",
     "    return (newP, newQ)\n",
     "\n",
-    "def gd_batch(R_list, P, Q, alpha, llambda, batch_num, iterations, R = None, verbose=False):#runs the gradient descent loop in batches \n",
+    "#runs the gradient descent loop in batches\n",
+    "def gd_batch(R_list, P, Q, alpha, llambda, batch_num, iterations, R = None, verbose=False): \n",
     "    #make copies of P and Q\n",
     "    P_current = P.copy()\n",
     "    Q_current = Q.copy()\n",
@@ -136,8 +142,8 @@
     "            \n",
     "    return (P_current , Q_current)\n",
     "\n",
-    "\n",
-    "def error_function( R_list,R, P , Q ):#error function without l2 normalization factor\n",
+    "#error function without l2 normalization factor\n",
+    "def error_function( R_list,R, P , Q ):\n",
     "    result = 0\n",
     "    #sum over R_list\n",
     "    for row, col in R_list:\n",
