removed copy from update_params_loop

--- a/matrix_factorization/matrix_factorization.ipynb
+++ b/matrix_factorization/matrix_factorization.ipynb
@@ -104,8 +104,8 @@
     "\n",
     "# use gradient descent to minimize MSE (with l2 regularization)\n",
     "def update_params_loop(R_list, P, Q, alpha, llambda): \n",
-    "    newP = P.copy() \n",
-    "    newQ = Q.copy()\n",
+    "    newP = P \n",
+    "    newQ = Q\n",
     "    m , f = np.shape(P)\n",
     "    n = np.shape(Q)[0]\n",
     "\n",
