Wrote code to construct SQL database
Also modified Read_data to compute some statistics of a few json files.

--- a/Read_data.ipynb
+++ b/Read_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "Zxd4mGD2EoYk"
    },
@@ -15,14 +15,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "tcFnSZWrEoYl"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "spotify_million_playlist_dataset/data/mpd.slice.0-999.json\n",
+      "spotify_million_playlist_dataset/data/mpd.slice.1000-1999.json\n",
+      "spotify_million_playlist_dataset/data/mpd.slice.2000-2999.json\n",
+      "spotify_million_playlist_dataset/data/mpd.slice.3000-3999.json\n",
+      "spotify_million_playlist_dataset/data/mpd.slice.4000-4999.json\n",
+      "spotify_million_playlist_dataset/data/mpd.slice.5000-5999.json\n",
+      "spotify_million_playlist_dataset/data/mpd.slice.6000-6999.json\n",
+      "spotify_million_playlist_dataset/data/mpd.slice.7000-7999.json\n",
+      "spotify_million_playlist_dataset/data/mpd.slice.8000-8999.json\n",
+      "spotify_million_playlist_dataset/data/mpd.slice.9000-9999.json\n"
+     ]
+    }
+   ],
    "source": [
     "# n is the number of json files we wish to read (max is 1000)\n",
-    "n = 5\n",
+    "n = 10\n",
     "\n",
     "for i in range(n):\n",
     "    # create the file_name string in order to read in file\n",
@@ -31,7 +48,7 @@
     "        + '-' + str(i*1000+999) + '.json'\n",
     "\n",
     "    # Uncomment the following line to show progress\n",
-    "    # print(file_name)\n",
+    "    print(file_name)\n",
     "\n",
     "    # open the file and store its contents in file_contents\n",
     "    with open(file_name) as user_file:\n",
@@ -71,53 +88,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "mbsR-vpeEoYl"
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "Tq54wsBPEoYm",
-    "outputId": "4b87505a-e790-47c8-d3d1-a3794430f232"
-   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'm testing if Colab syncs changes to Github\n"
+      "Total tracks: 664712\n",
+      "Unique tracks: 170089\n",
+      "Unique playlists: 10000\n"
      ]
     }
    ],
    "source": [
-    "print(\"I'm testing if Colab syncs changes to Github\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "id": "5RmRCjg9EoYm"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test if Colab automatically sees changes in Github\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Test if Colab automatically sees changes in Github\")"
+    "# Stats\n",
+    "# Count the number of unique tracks\n",
+    "nTracks = data['track_uri'].nunique()\n",
+    "\n",
+    "# Count the number of unique playlists\n",
+    "nPlaylists = data['pid'].nunique()\n",
+    "\n",
+    "# Total number of tracks\n",
+    "nTotalTracks = data.shape[0]\n",
+    "\n",
+    "print('Total tracks:', nTotalTracks)\n",
+    "print('Unique tracks:', nTracks)\n",
+    "print('Unique playlists:', nPlaylists)"
    ]
   },
   {
@@ -144,7 +143,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
